# nakasendo

./: CMakeLists.txt  Dockerfile  Jenkinsfile  LICENCE.txt  README.md  ReleaseNote.md  SDK-BUILD-README  entrypoint.sh  releasenotes.sh  unittests.py
depends/secp256k1/: CMakeLists.txt  secp256k1.cpp
depends/secp256k1/include/: secp256k1_keypuzzle.h
depends/secp256k1/src/: field_5x52_int128_impl.h  libsecp256k1-config.h.cmake.in  scalar_4x64_impl.h  secp256k1.cpp  tests.cpp  tests_exhaustive.cpp
doc/nakasendo/: CMakeLists.txt  mkdocs.yml  plantuml  plantuml.cmd
doc/nakasendo/docs/: DeveloperSetup.md  Guides.md  HighLevelFunctions.md  Primitives.md  QuickStart.md  index.md
examples/: CMakeLists.txt  README
examples/TS_protobuf/: CMakeLists.txt  readme.txt
examples/TS_protobuf/cpp/: CMakeLists.txt  Makefile  MessageRequestResponse.cpp  MessageRequestResponse.h  TSMessageHandler.cpp  TSMessageHandler.h  client_grpc.cpp  serverConnection.cpp  serverConnection.h  serverListener.cpp  server_grpc.cpp  startclients.sh  stopclients.sh  tsClient.cpp
examples/TS_protobuf/py/: client_grpc.py  server_grpc.py  startclients.sh  stopclients.sh
examples/TS_twisted/: client_twisted.py  server_twisted.py  startclients.sh  stopclients.sh
examples/cpp/: BCHAddressInfo.cpp  BCHAddressInfo.h  BigNumbersClient.cpp  BigNumbersRandTest.cpp  CMakeLists.txt  ECPointTest.cpp  KeyTest  KeyTest.cpp  MessageHashClient.cpp  RecoverSecret.cpp  SeedGeneration.cpp  SymEncDecTest.cpp  TSExample.cpp  cashaddr.cpp  cashaddr.h  exCMakeLists.txt  exFindSDKLibraries.cmake  shamirsSecret.cpp
examples/javascript/: CMakeLists.txt  README.md  index.html
examples/python/: Base64.py  CMakeLists.txt  ECPointInterpolator.py  KeySplitAndRecover.py  README.md  TestNakB64.py  TestNakasando.py  TestNakasendo.py  WP42Example.py  verifyTest.py
misc/: BigNumInterface.js  CMakeLists.txt  MessageHashAPI.js  MessageHashAPISetup.py  makefile-BigNumbers  makefile-MessageHash
misc/LatexDoc/: Nakasendo.tex  Nakasendo_Logo.ps
misc/PyThresholdSignature/: CMakeLists.txt  FiniteGroup.py  Polynomial.py  PyGroup.py  PyGroupBuilder.py  PyGroupResponseMessage.py  PyGroupSecretIntermediary.py  PyGroupSecretPlayerBuilder.py  PyGroupSecretPlayerBuilder_Updated.py  PyGroupSecretResponseMessage.py  PyGroupSecretSetupMessage.py  PyGroupSetupMessage.py  PyGroupState.py  PyMessage.py  PyPlayer.py  PyPolynomials.py  PyUUID.py  Threshold.py  utils.py
misc/PyThresholdSignature/test/: DefinedPolys.py  ECPointTests.py  SigTest.py  TSLiveDemo.py  TSSPlayersGroups.py  TSSpec.py  TSSpecHex-Modified.py  TSSpecHex-Wei.py  TSSpecHex.py-Worked  TSSpecHex.py.2ndTXWorked  TSSteps.py  TSWithNakasendo.py  TXHandler.py  bsvrawtransaction.py  ecdsaVerify.py  myTest.py  savedSigCode.py  test_DealerLessShareSecret.py  test_FiniteGroup.py  test_GroupBuilder.py  test_GroupPlayersCreation.py  test_GroupSecretIntermediary.py  test_GroupSecretPlayerBuilder.py  test_LagrangeInterpolator.py  test_Polynomial.py  test_PythonECDSA.py  test_Threshold.py  test_ThresholdSignature.py  verifyTest.py
misc/TSMessagingFramework/: Player.py  client.py  orchestrator.py  round1_sequence_diagram.wsd  round2_sequence_diagram.wsd  server.py  startclients.sh
misc/ThresholdSignatures/: GroupSetupMessage.h  GroupState.h  UUID.cpp
misc/ThresholdSignatures/interface/: Message.h
misc/WASMModule/: CMakeLists.txt  CoreModule.cpp  CoreModule.hpp  CoreModuleFile1.cpp  CoreModuleFile1.hpp  CoreModuleFile2.cpp  CoreModuleFile2.hpp  JsModule.cpp  JsModule.hpp  README.txt  index.html
misc/WASMModule/test/: test_CoreModule.js
misc/WasmTest/: ReadME  calc.html  runWasmAll.sh  webserver.py
misc/documentation/mdbook/: book.toml
misc/documentation/mkdocs/: mkdocs.yml
misc/documentation/nakasendo/: CMakeLists.txt  mkdocs.yml
src/: BigNumSetup.py  CMakeLists.txt  MessageHashAPISetup.py
src/BigNumbers/: BigNumAPI.cpp  BigNumAPI.h  BigNumPythonAPI.cpp  BigNumbers.cpp  BigNumbers.h  BigNumbersClient.cpp  BigNumbersImpl.cpp  BigNumbersImpl.h  BigNumbersRandTest.cpp  CMakeLists.txt
src/MessageHash/: CMakeLists.txt  MessageHash.h  MessageHashAPI.cpp  MessageHashAPI.h  MessageHashClient.cpp  MessageHashImpl.cpp  MessageHashImpl.h  MessageHashPythonAPI.cpp
src/ThresholdSignatures/: CMakeLists.txt  Group.cpp  Group.h  GroupState.h  Player.cpp  Player.h  UUID.cpp  UUID.h
src/WasmTest/: calc.html  mk-openssl-webassemby.sh  runWasmAll.sh
src/applications/: CMakeLists.txt
src/applications/PyThresholdSignatures/: client.py  orchestrator.py  player.py  round1_sequence_diagram.wsd  startclients.sh  (+2 more)
src/core/: CMakeLists.txt
src/modules/: CMakeLists.txt  Nakasando.py  PyModuleLoadHelper.py.in  PyTools.cmake  WasmTools.cmake  py_module_builder.py.in  wasm_module_builder.bat.in  wasm_module_builder.in  wasm_module_builder.sh.in
tests/: BigNumbersClient.cpp  BigNumbersRandTest.cpp  CMakeLists.txt  ECPointTest.cpp  JUnitViewer.py  MessageHashClient.cpp  SymEncDecTest.cpp
tests/functional/: .gitignore  CMakeLists.txt  TestArgsParser.py  bigNumlib.py  conftest.py  functionaltests.py  msgHashlib.py  testData_AddDec  testData_AddHex  testData_EncodeDecode  testData_GenBigNum  testData_HashMsg  testData_MsgSHA256  testData_MultiplyDec  testData_SubHex  test_AsymKey.py  test_AsymKey_Test.py  test_BigNumber.py  test_ECPoint.py  test_ECPoint_Test.py  test_Nakasendo.py  test_Orchestrator.py  test_Player.py  test_Polynomial.py  test_SecretSplit.py  test_SymEncoDecode.py  test_SymEncoDecode_copy.py  test_bigNumberAPI_Test.py  test_messageHashAPI_test.py
tests/javascript/: CMakeLists.txt  README.txt  index.html  test_BigNumbers.js
tests/unit/: Base64.py  CMakeLists.txt  PyModuleLoader.py  TestNakB64.py  TestNakasando.py  TestUtils.h  test_AsymKey.cpp  test_BCHAddress.cpp  test_BSVAddress.cpp  test_BigNumbers.cpp  test_BigNumbers.h  test_BigNumbersRandom.cpp  test_ECPoints.cpp  test_GroupBuilder.cpp  test_GroupPlayer.cpp  test_Interpolation.cpp  test_KnownPolynomial.cpp  test_MessageHash.cpp  test_Polynomial.cpp  test_SymEncDec.cpp  test_TS_playerAndGroup.cpp  test_secretsplit.cpp
(+308 files in other folders)
