################################################################
#  Date             19/08/2019                                  #
#  Author           nChain's employees                          #
#                                                               #
#  Copyright (c) 2019 nChain Limited. All rights reserved       #
#################################################################

install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/index.html" DESTINATION "example/javascript" COMPONENT "Examples javascript")
